--- a/sideproject_firebase/socialClubApp/views/clubMain.ejs
+++ b/sideproject_firebase/socialClubApp/views/clubMain.ejs
@@ -2,7 +2,7 @@
   <!-- 현재 동호회명 & 클럽 정보 출력 -->
 </div>
 
-<%-include("./clubActivity/clubNav.ejs")%>
+<%-include("./clubActivity/board/list.ejs")%>
 
 <script type="module">
   import { app } from "/javascripts/firebase.js";
@@ -22,7 +22,6 @@
   console.log(docSnapshot.id, ' => ', docSnapshot.data());
   // 가져온 문서 사용하기
   const doc = docSnapshot.data();
-
   const template = `
     <div class="current-clubInfo">
       <div class="flex-grow-1 p-4">
@@ -35,17 +34,5 @@
   // 문서가 존재하지 않을 때 처리하는 내용
   console.log('해당 문서가 존재하지 않습니다.');
 }
-
-  // docSnapshot.forEach((doc) => {
-  //   const template = `
-  //   <div class="current-clubInfo">
-  //     <div class="flex-grow-1 p-4">
-  //           <h5 class="club-name">${doc.data().club_name}</h5>
-  //           <p class="club-aim">${doc.data().club_aim}</p>
-  //       </div>
-  //   </div>`;
-  //   console.log(doc.id, " => ", doc.data());
-  //   $('.current-clubInfo').append(template);
-  // })
 </script>
 
