--- a/sideproject_firebase/socialClubApp/views/clubActivity/board/read.ejs
+++ b/sideproject_firebase/socialClubApp/views/clubActivity/board/read.ejs
@@ -37,10 +37,24 @@
   console.log(readId);
   try {
     const snapshot = await getDoc(doc(collection(db, `club-category-${category}`, clubId, 'board'), readId));
-    const row = snapshot.data();    
+    const row = snapshot.data();  
+    console.log(row);  
     let temp = Handlebars.compile($('#temp').html());
     $("#board").html(temp(row));
   } catch (error) {
     console.error("Error fetching data:", error);
   }
+
+  // $(document).on('click', '#boards a', async function(event) {
+  //   event.preventDefault();
+  //   const readId = $(this).attr('href').split('/').pop(); // 클릭한 링크의 마지막 부분을 ID로 사용합니다.
+  //   try {
+  //     const snapshot = await getDoc(doc(collection(db, `club-category-${category}`, clubId, 'board'), readId));
+  //     const row = snapshot.data();    
+  //     let temp = Handlebars.compile($('#temp').html());
+  //     $("#board").html(temp(row));
+  //   } catch (error) {
+  //     console.error("Error fetching data:", error);
+  //   }
+  // });
 </script>
