--- a/sideproject_firebase/socialClubApp/views/clubActivity/clubNav.ejs
+++ b/sideproject_firebase/socialClubApp/views/clubActivity/clubNav.ejs
@@ -1,7 +1,7 @@
 <div class="clubMain-property">
   <ul class="nav nav-tabs mt-3">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="/clubMain/<%=id%>/<%=id2%>/board">Board</a>
+      <a class="nav-link active" aria-current="page" href="/clubMain/<%=id%>/<%=id2%>">Board</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/clubMain/<%=id%>/<%=id2%>/album">Album</a>
