--- a/sideproject_firebase/socialClubApp/views/clubActivity/board/list.ejs
+++ b/sideproject_firebase/socialClubApp/views/clubActivity/board/list.ejs
@@ -19,7 +19,7 @@
   {{#each .}}
   <div class="card my-2" style="font-size:0.8rem">
     <div class="card-body">
-        <a href="/clubMain/{{category}}/{{id}}/{{rid}}"><h5>{{ title }}</h5></a>
+        <a href="/clubMain/{{category}}/{{id}}/detail/{{rid}}"><h5>{{ title }}</h5></a>
         <div class="ellipsis2">{{ body }}</div>
     </div>
     <div class="card-footer">
