--- a/sideproject_firebase/socialClubApp/views/clubActivity/board/read.ejs
+++ b/sideproject_firebase/socialClubApp/views/clubActivity/board/read.ejs
@@ -35,26 +35,27 @@
   console.log(category);
   console.log(clubId);
   console.log(readId);
-  try {
-    const snapshot = await getDoc(doc(collection(db, `club-category-${category}`, clubId, 'board'), readId));
-    const row = snapshot.data();  
-    console.log(row);  
-    let temp = Handlebars.compile($('#temp').html());
-    $("#board").html(temp(row));
-  } catch (error) {
-    console.error("Error fetching data:", error);
-  }
 
-  // $(document).on('click', '#boards a', async function(event) {
-  //   event.preventDefault();
-  //   const readId = $(this).attr('href').split('/').pop(); // 클릭한 링크의 마지막 부분을 ID로 사용합니다.
-  //   try {
-  //     const snapshot = await getDoc(doc(collection(db, `club-category-${category}`, clubId, 'board'), readId));
-  //     const row = snapshot.data();    
-  //     let temp = Handlebars.compile($('#temp').html());
-  //     $("#board").html(temp(row));
-  //   } catch (error) {
-  //     console.error("Error fetching data:", error);
-  //   }
-  // });
+  const snapshot = await getDoc(doc(collection(db, `club-category-${category}`, clubId, 'board'), readId));
+  const row = snapshot.data();  
+  console.log(row);  
+  let temp = Handlebars.compile($('#temp').html());
+  $("#board").html(temp(row));
+
+  // 로그인한 이메일과 글쓴이 이메일 동일 할 시 글 수정
+  if( email==row.email ){
+    $('#btn-group').toggle();
+  }
+  $("#btn-update").on('click', async function(){ 
+    location.href = "/clubMain/`${category}`/`${clubId}`/update"+id;
+  })
+
+  // 글 삭제
+  $("#btn-delete").on('click', async function(){ 
+    if(confirm(readId+"번 게시글 삭제할거니?")){
+      await deleteDoc(doc(collection(db, `club-category-${category}`, clubId, 'board'), readId));
+      //삭제 후 목록페이지로 돌아감
+      location.href = "/clubMain/<%=id%>/<%=id2%>";
+    }
+  })
 </script>
