--- a/sideproject_firebase/socialClubApp/views/clubList.ejs
+++ b/sideproject_firebase/socialClubApp/views/clubList.ejs
@@ -70,7 +70,7 @@
       console.log("문서 길이"+getData.docs.length);
       if(getData){//가져올 클럽데이터가 있으면 실행
         getData.docs.forEach((doc,index)=>{
-          let thumbnail = 'https://via.placeholder.com/150';//엑박이미지
+          let thumbnail = 'https://source.unsplash.com/random';//엑박이미지
           if(doc.data().club_thumbnail){//이미지가 있으면 썸네일 사용 없으면 엑박이미지 사용
             thumbnail = doc.data().club_thumbnail;
           }
@@ -79,7 +79,8 @@
             <div class="thumbnail" style="background-image: url('${thumbnail}"></div>
             <div class="flex-grow-1 p-4">
                 <h5 class="club-name">${doc.data().club_name}</h5>
-                <p class="club-info">${doc.data().club_info}</p>
+                <p class="club-aim">${doc.data().club_aim}</p>
+                <p class="club-loc">${doc.data().club_loc}</p>
                 <p class="float-end">❤️0</p>
             </div>
           </div>
@@ -93,7 +94,7 @@
       const getData = await getDocs(collection(db, `club-category-${id}`));//데이터 받아오기
       if(getData){
         getData.docs.forEach((doc,index)=>{
-          let thumbnail = 'https://via.placeholder.com/150';//엑박이미지
+          let thumbnail = 'https://source.unsplash.com/random';//엑박이미지
           if(doc.data().club_thumbnail){//이미지가 있으면 썸네일 사용 없으면 엑박이미지 사용
             thumbnail = doc.data().club_thumbnail;
           }
@@ -102,7 +103,8 @@
             <div class="thumbnail" style="background-image: url('${thumbnail}"></div>
             <div class="flex-grow-1 p-4">
                 <h5 class="club-name">${doc.data().club_name}</h5>
-                <p class="club-info">${doc.data().club_info}</p>
+                <p class="club-aim">${doc.data().club_aim}</p>
+                <p class="club-loc">${doc.data().club_loc}</p>
                 <p class="float-end">❤️0</p>
             </div>
           </div>
