--- a/sideproject_firebase/socialClubApp/views/header.ejs
+++ b/sideproject_firebase/socialClubApp/views/header.ejs
@@ -17,11 +17,11 @@
       </ul>
       <div class="d-flex">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item" id="btn-mypage" style="display: none;">
+            <a class="nav-link active" aria-current="page" href="/users/mypage">Mypage</a>
+          </li>
           <li class="nav-item" id="login">
             <a class="nav-link active" aria-current="page" href="/login">로그인</a>
-          </li>
-          <li class="nav-item" id="mypage" style="display: none;">
-            <a class="nav-link active" aria-current="page" href="/users/mypage">Mypage</a>
           </li>
           <li class="nav-item" id="logout" style="display: none;">
             <a class="nav-link active" aria-current="page" href="#">로그아웃</a>
@@ -48,7 +48,7 @@
   })
   
     if(localStorage.getItem('email')){
-    $('#login, #logout').toggle();
+    $('#login, #logout , #btn-mypage').toggle();
     // $('#mypage a').html(localStorage.getItem('email'));
   }
 </script>
